--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.4",
     "watch": "^1.0.2"
+  },
+  "dependencies": {
+    "prettier": "^2.2.1"
   }
 }
