--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
   },
   "author": "Kevin Peno <kevinpeno@gmail.com>",
   "license": "UNLICENSE",
+  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
-    "cli-clear": "^1.0.4",
     "eslint": "^5.16.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3",
-    "watch": "^1.0.2"
-  },
-  "dependencies": {
-    "prettier": "^2.2.1"
+    "jest": "^27.1.0",
+    "prettier": "^2.2.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   }
 }
