--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "author": "Kevin Peno <kevinpeno@gmail.com>",
   "license": "UNLICENSE",
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -18,6 +17,7 @@
     "jest": "^27.1.0",
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
 }
