--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   /* Visit https://aka.ms/tsconfig.json to read more about this file */
   "include": [
-    "src/index.ts"
+    "src/*"
   ],
   "exclude": [
     "node_modules",
