--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^5.16.0",
     "jest": "^27.1.0",
     "prettier": "^2.2.1",
+    "ts-expect": "^1.3.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
