--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "redeux",
-  "version": "0.0.1",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "jest"
-  },
-  "author": "Kevin Peno <kevinpeno@gmail.com>",
-  "license": "UNLICENSE",
-  "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^5.16.0",
-    "jest": "^27.1.0",
-    "prettier": "^2.2.1",
-    "ts-expect": "^1.3.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
-  }
+	"name": "redeux",
+	"version": "0.0.1",
+	"description": "",
+	"main": "src/index.js",
+	"scripts": {
+		"build": "tsc",
+		"test": "jest"
+	},
+	"author": "Kevin Peno <kevinpeno@gmail.com>",
+	"license": "UNLICENSE",
+	"devDependencies": {
+		"@types/jest": "^27.0.1",
+		"@typescript-eslint/eslint-plugin": "^4.15.0",
+		"@typescript-eslint/parser": "^4.15.0",
+		"eslint": "^8.0.1",
+		"jest": "^27.1.0",
+		"prettier": "2.4.1",
+		"ts-expect": "^1.3.0",
+		"ts-jest": "^27.0.5",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.4.2"
+	}
 }
